examples/pass/FF-F.stl
/** Fence2Elim **/ 
global x; 
local l; 

/** Optimised **/ 
fenceSC; 

/** Unoptimised **/ 
fenceSC; 
fenceSC; 
