examples/fail/RxlF-FRxl.stl
/** RMFence2 **/

global x; 
local l; 

/** Optimised **/

fenceSC; 
read(x,l); 

/** Unoptimised **/ 

read(x,l); 
fenceSC; 

